[package]
name = "bip38"
version = "1.1.0"
authors = ["ceca69ec8e1bcad6c6d79e1dcf7214ff67766580a62b7d19a6fb094c97b4f2dc"]
edition = "2018"
include = [
	"src/*",
	"Cargo.toml",
	"README.md"
]
description = "Encrypt and decrypt bitcoin private keys with bip-0038 standard."
documentation = "https://docs.rs/bip38"
homepage = "https://github.com/bitcoin/bips/blob/master/bip-0038.mediawiki"
repository = "https://github.com/ceca69ec/bip38"
keywords = ["bip-0038", "bitcoin", "decryption", "encryption", "wif"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
aes = "0.7.4"
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }
rand = { version = "0.8.4", default-features = false, features = ["alloc"] }
ripemd160 = { version = "0.9.0", default-features = false }
scrypt = { version = "0.7.0", default-features = false }
secp256k1 = { version = "0.20.0", default-features = false, features = ["alloc"] }
digest = { version = "0.10.7", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
unicode-normalization = { version = "0.1.19", default-features = false }

[features]
default = ["std"]
std = ["rand/std", "rand/std_rng", "sha2/std", "unicode-normalization/std", "digest/std"]