[package]
name = "bip38"
version = "1.1.1"
authors = ["ceca69ec8e1bcad6c6d79e1dcf7214ff67766580a62b7d19a6fb094c97b4f2dc"]
edition = "2021"
include = [
	"src/*",
	"Cargo.toml",
	"README.md"
]
description = "Encrypt and decrypt bitcoin private keys with bip-0038 standard."
documentation = "https://docs.rs/bip38"
homepage = "https://github.com/bitcoin/bips/blob/master/bip-0038.mediawiki"
repository = "https://github.com/ceca69ec/bip38"
keywords = ["bip-0038", "bitcoin", "decryption", "encryption", "wif"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
aes = "0.8.4"
bs58 = "0.5.1"
rand = "0.8.5"
ripemd = "0.1.3"
scrypt = { version = "0.11.0", default-features = false }
secp256k1 = "0.29.0"
sha2 = "0.10.8"
unicode-normalization = "0.1.23"
